--- a/Project0/index0.html
+++ b/Project0/index0.html
@@ -70,7 +70,7 @@
      <p>CSS #id Selector.</p>
      <p>Five different properties of CSS.</p>
      <p>Three different selectors of CSS.</p>
-     <p>Inherit property.</p>
+     <p>Inherit Property.</p>
     </div>
   </div>
 </div>
