--- a/Project0/index00.html
+++ b/Project0/index00.html
@@ -20,7 +20,7 @@
           <h2> This is my first website and I am very excited about it!!!</h2>
             <h3> Lets add some unordered list, also know as bulleted list.
               <ul>
-                <li>This website is based upon HTML.
+                <li>This website is based on HTML.
                 <li>I have also used some features of CSS, SCSS and boot strap.
                 <li>This website has 4 webpages in it.
                 <li>Each of those pages can be reached from any page of this website, using appropriate links.
