--- a/Project0/index2.html
+++ b/Project0/index2.html
@@ -22,11 +22,11 @@
         <li class="b"> The font style property. Notice how size, colour and font is different for this psragraph compared to others. This is because of font property set for class named "a"</li>
         <li class="c"> Inherit property. For example the font style of this line is inherited from its parent class, which is class "html".</li>
         <li> Here i have used "Inline Block Display property" of CSS to display <p class="d">HELLO WORLD!</p> in line and as a block in red colour.</li>
-        <li class="e"> Here i have demonstrated margin and padding property of css, as you can see, this line has a margin and padding in it. Also it is centered aligned using elemen selector.</li>
+        <li class="e"> Here i have demonstrated margin and padding property of css, as you can see, this line has a margin and padding in it. Also its centered aligned using elemen selector.</li>
         <div id="box2">
           <img src ="/Users/Praqash/github/sun.png" alt="sun" width="600" height="450">
         </div>
-<li> The picture above is placed using #id selector.
+<li> The picture above is placed using #id Selector.
 
 
 <nav>
